fixing the padding bottom gap for filters

--- a/src/components/filters/filters.scss
+++ b/src/components/filters/filters.scss
@@ -12,7 +12,7 @@
 
 .filters__section-wrapper {
   margin: 0;
-  padding: 0;
+  padding: 4px 0 28px;
   list-style: none;
 }
 
